
file(GLOB MATLAB_SCRIPTS "*.m")







if(BUILD_MATLAB_MEX_FILES)

	configure_file(${FAUST_DEMO_SRC_DIR}/run_all_demo.m ${FAUST_DEMO_BIN_DIR}/run_all_demo.m COPYONLY)
      		install(FILES ${FAUST_DEMO_BIN_DIR}/run_all_demo.m DESTINATION ${FAUST_DEMO_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

	
	############# Brain source localization demo ####################
	file(GLOB BSL_MATLAB_SCRIPTS  RELATIVE ${FAUST_DEMO_BSL_SRC_DIR} "${FAUST_DEMO_BSL_SRC_DIR}/*.m")	
	foreach(matlab_script ${BSL_MATLAB_SCRIPTS})
      		configure_file(${FAUST_DEMO_BSL_SRC_DIR}/${matlab_script} ${FAUST_DEMO_BSL_BIN_DIR}/${matlab_script} COPYONLY)
      		install(FILES ${FAUST_DEMO_BSL_BIN_DIR}/${matlab_script} DESTINATION ${FAUST_DEMO_BSL_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)	
   	endforeach()
	
	file(GLOB BSL_DATA_FILE  RELATIVE ${FAUST_DATA_MAT_DIR} "${FAUST_DATA_MAT_DIR}/*MEG*.mat")
	foreach(data_BSL ${BSL_DATA_FILE})
      		configure_file(${FAUST_DATA_MAT_DIR}/${data_BSL} ${FAUST_DEMO_BSL_DATA_BIN_DIR}/${data_BSL} COPYONLY)
      		install(FILES ${FAUST_DEMO_BSL_DATA_BIN_DIR}/${data_BSL} DESTINATION ${FAUST_DEMO_BSL_DATA_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)	
   	endforeach()
	

	######### Hadamard factorization ###############################
	file(GLOB HADAMARD_MATLAB_SCRIPTS  RELATIVE ${FAUST_DEMO_HADAMARD_SRC_DIR} "${FAUST_DEMO_HADAMARD_SRC_DIR}/*.m")
	foreach(matlab_script ${HADAMARD_MATLAB_SCRIPTS})		
		configure_file(${FAUST_DEMO_HADAMARD_SRC_DIR}/${matlab_script} ${FAUST_DEMO_HADAMARD_BIN_DIR}/${matlab_script} COPYONLY)
      		install(FILES ${FAUST_DEMO_HADAMARD_BIN_DIR}/${matlab_script} DESTINATION ${FAUST_DEMO_HADAMARD_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
	endforeach()

	####### Runtime Comparison ######################################
	file(GLOB TIMECOMP_MATLAB_SCRIPTS  RELATIVE ${FAUST_DEMO_TIMECOMP_SRC_DIR} "${FAUST_DEMO_TIMECOMP_SRC_DIR}/*.m")
	foreach(matlab_script ${TIMECOMP_MATLAB_SCRIPTS})		
		configure_file(${FAUST_DEMO_TIMECOMP_SRC_DIR}/${matlab_script} ${FAUST_DEMO_TIMECOMP_BIN_DIR}/${matlab_script} COPYONLY)
      		install(FILES ${FAUST_DEMO_TIMECOMP_BIN_DIR}/${matlab_script} DESTINATION ${FAUST_DEMO_TIMECOMP_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
	endforeach()
	
	##### Quick Start ##############################################
	configure_file(${FAUST_DEMO_QUICKSTART_SRC_DIR}/quick_start.m ${FAUST_DEMO_QUICKSTART_BIN_DIR}/quick_start.m COPYONLY)
      	install(FILES ${FAUST_DEMO_QUICKSTART_BIN_DIR}/quick_start.m DESTINATION ${FAUST_DEMO_QUICKSTART_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

	configure_file(${FAUST_DATA_MAT_DIR}/faust_quick_start.mat ${FAUST_DEMO_QUICKSTART_BIN_DIR}/faust_quick_start.mat COPYONLY)
      	install(FILES ${FAUST_DEMO_QUICKSTART_BIN_DIR}/faust_quick_start.mat DESTINATION ${FAUST_DEMO_QUICKSTART_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
	
	
	#################### Tools directory ############################
	file(GLOB TOOLS_MATLAB_SCRIPTS RELATIVE ${FAUST_DEMO_TOOLS_SRC_DIR}  "${FAUST_DEMO_TOOLS_SRC_DIR}/*.m")
	foreach(tools ${TOOLS_MATLAB_SCRIPTS})
      		configure_file(${FAUST_DEMO_TOOLS_SRC_DIR}/${tools} ${FAUST_DEMO_TOOLS_BIN_DIR}/${tools} COPYONLY)
      		install(FILES ${FAUST_DEMO_TOOLS_BIN_DIR}/${tools} DESTINATION ${FAUST_DEMO_TOOLS_INSTALL_DIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)	
   	endforeach()
		
	


endif()
	
	
